Fix bug in BassGenerator (notes outside songpart scope because of bass swing-feel tempo adapter)